Finished MissionRow component
Added the edit icon

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@ html {
     margin: 0 5px;
 }
 #TrashCanIcon {
-    height: 24px;
-    width: 24px;
+    height: 18px;
+    width: 18px;
+}
+#PencilIcon {
+    height: 18px;
+    width: 18px;
 }
