Fixed MissionRow height

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ html {
     margin: 10px 20%;
     display: flex;
     justify-content: space-between;
+    height: 45px;
 }
 .MissionField {
     margin: 10px 20px;
