--- a/src/App.css
+++ b/src/App.css
@@ -126,3 +126,21 @@ html {
     width: 25%;
     margin: 5px;
 }
+.modal-footer button {
+    margin: 5px;
+
+}
+#SaveButton {
+    background-color: cornflowerblue;
+    border: none;
+    color: white;
+    padding: 10px 16px;
+    font-size: 16px;
+}
+#CancelButton {
+    background-color: rgb(49, 49, 49);
+    border: none;
+    color: white;
+    padding: 10px 16px;
+    font-size: 16px;
+}
