Fixed functions inside event handlers
Also added cursor pointer to buttons in modal

--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,9 @@ html {
     margin: 5px;
 
 }
+.modal-footer button:hover {
+    cursor: pointer;
+}
 #SaveButton {
     background-color: cornflowerblue;
     border: none;
