--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,12 @@ html {
     align-items: center;
     flex-direction: column;
 }
-#Mission {
+.Mission {
     background-color: rgb(92, 91, 91);
     color: aliceblue;
     margin: 10px 20%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     height: 45px;
 }
@@ -44,16 +45,18 @@ html {
 }
 #MissionInfo {
     display: flex;
+    order: 4;
 }
 .MissionInfoField {
     margin: 0 5px;
 }
 #MissionStatus {
     position: absolute;
-    left: 55%;
+    left: 57%;
     background-color: rgb(39, 39, 39);
     padding: 2px 13px;
     cursor: default;
+    order: 3;
 }
 #TrashCanIcon {
     height: 18px;
@@ -146,4 +149,37 @@ html {
     color: white;
     padding: 10px 16px;
     font-size: 16px;
+}
+.arrow {
+    width: 0;
+    height: 0;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-top: 15px solid rgb(255, 255, 255);
+    align-self: center;
+    margin-left: 5px;
+    order: 1;
+    cursor: pointer;
+}
+.arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-bottom: 15px solid rgb(255, 255, 255);
+    align-self: center;
+    margin-left: 5px;
+    order: 1;
+    cursor: pointer;
+}
+#MissionName {
+    position: absolute;
+    left: 31%;
+    order: 2;
+}
+.sub-mission {
+    margin-left: 210px;
+}
+.sub-mission #MissionName {
+    left: 33%;
 }
