--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --width: 530px;
+}
+
 html {
     width: 100%;
     height: 100%;
@@ -33,42 +37,42 @@ html {
     flex-direction: column;
 }
 .Mission {
+    height: 40px;
     background-color: rgb(92, 91, 91);
     color: aliceblue;
-    margin: 10px 20%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    height: 45px;
-}
-.MissionField {
-    margin: 10px 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: var(--width);
 }
 #MissionInfo {
-    display: flex;
+    display: block;
+    width: 85px;
+    max-height: 20px;
     order: 4;
 }
-.MissionInfoField {
-    margin: 0 5px;
-}
 #MissionStatus {
-    position: absolute;
-    left: 57%;
-    background-color: rgb(39, 39, 39);
-    padding: 2px 13px;
+    flex-grow: 1;
+    margin: 8px 0 7px 0;
     cursor: default;
     order: 3;
+    display: flex;
+    justify-content: flex-end;
+}
+#status {
+    padding: 2px 13px;
+    background-color: rgb(39, 39, 39);
 }
 #TrashCanIcon {
     height: 18px;
     width: 18px;
-    border: none;
-    background: transparent;
     cursor: pointer;
 }
 #PencilIcon {
     height: 18px;
     width: 18px;
+    cursor: pointer;
 }
 #CreateMission {
     height: 64px;
@@ -87,7 +91,7 @@ html {
 .optionBtn {
     border: none;
     background: transparent;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 .modal {
     position: fixed;
@@ -132,7 +136,6 @@ html {
 }
 .modal-footer button {
     margin: 5px;
-
 }
 .modal-footer button:hover {
     cursor: pointer;
@@ -174,19 +177,25 @@ html {
     cursor: pointer;
 }
 #MissionName {
-    position: absolute;
-    left: 31%;
+    margin-left: 20px;
     order: 2;
 }
-.sub-mission-1 {
-    margin-left: 210px;
+#sub-mission-list {
+    margin-top: 5px;
+    /* background-color: aqua; */
+    width: var(--width);
+    padding: 0;
+    display: flex;
+    justify-content: flex-end;
+    order: 5;
 }
-.sub-mission-1 #MissionName {
-    left: 33%;
+#mission-list {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
 }
-.sub-mission-0 {
-    margin-left: 240px;
-}
-.sub-mission-0 #MissionName {
-    left: 35.5%;
+#mission-list > li {
+    margin: 5px;
 }
