--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
 :root {
     --width: 530px;
 }
-
 html {
     width: 100%;
     height: 100%;
@@ -77,6 +76,7 @@ html {
 #CreateMission {
     height: 64px;
     width: 64px;
+    cursor: pointer;
 }
 #CreateMissionButton {
     height: fit-content;
@@ -86,12 +86,10 @@ html {
     left: 3%;
     border: none;
     background: transparent;
-    cursor: pointer;
 }
 .optionBtn {
     border: none;
     background: transparent;
-    /* cursor: pointer; */
 }
 .modal {
     position: fixed;
@@ -121,17 +119,17 @@ html {
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
 }
-#CreateMissionForm {
+#MissionForm {
     display: flex;
     flex-direction: column;
 }
-#CreateMissionForm > label, #CreateMissionForm > input {
+#MissionForm > label, #MissionForm > input {
     margin: 5px;
     width: 80%;
-    
 }
-#CreateMissionForm select {
-    width: 25%;
+#MissionForm select {
+    width: 30%;
+    text-align: center;
     margin: 5px;
 }
 .modal-footer button {
