--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@ html {
     background-color: rgb(0, 0, 0);
     color: aliceblue;
 }
-#FilterableMissionList {
+#filterable-mission-list-container {
     background-color: rgb(218, 218, 218);
     height: 100%;
     width: 70%;
