--- a/src/styles.css
+++ b/src/styles.css
@@ -30,11 +30,16 @@ html {
     margin: auto;
     overflow: auto;
 }
-#SearchBar {
+#search-bar {
     padding-top: 10px;
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+#search-bar input {
+    padding-left: 5px;
+    margin-bottom: 5px;
+    font-size: 15px;
 }
 .Mission {
     /* height: 40px; */
